--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.12.0",
     "@google/genai": "^1.30.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
